--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,12 +37,13 @@ body {
             margin: 5px;
             border-radius: 3px;
             background-color: black;
+            padding: 3px;
             cursor: pointer;
             text-align: center;
 
             span {
                 z-index: 99;
-                bottom: 23px;
+                bottom: 22px;
                 position: relative;
                 font-weight: bolder;
                 color: white;
@@ -50,10 +51,6 @@ body {
 
             .bar-fill{
                 height: 100%;
-                border-radius: 3px;
-                border: 3px solid black;
-
-                
             }
         }
     }
@@ -72,6 +69,7 @@ body {
             margin-bottom: 5px;
 
             input {
+                max-width: 80px;
                 text-align: center;
             }
 
@@ -90,10 +88,16 @@ body {
             input[type="color"]::-webkit-color-swatch {
                 border: none;
             }
+            .delete-bar {
+                color: #cf5151;
+                border: none;
+                background: none;
+                cursor: pointer;
+            }
         }
     }
 
-    button {
+    .add-bar {
         border: none;
         background-color: gray;
         border-radius: 0 0 10px 10px;
@@ -109,4 +113,37 @@ body {
         font-size: 20px;
         margin: 10px 0px;
     }
+}
+
+.waves {
+  position:relative;
+//   width: 510px;
+//   height:28px;
+//   margin-bottom:-7px; /*Fix for safari gap*/
+//   min-height:28px;
+//   max-height:28px;
+//   border-radius: 4px;
+}
+
+/* Animation */
+
+.parallax > use {
+  animation: move-forever 15s cubic-bezier(.55,.5,.45,.5) infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 3s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 7s;
+}
+
+@keyframes move-forever {
+  0% {
+   transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
 }
