--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 47vh 47vh;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-auto-rows: minmax(47vh, 1fr);
   gap: 2vh;
   padding: 2vh;
 }
