--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -20,7 +20,7 @@ body {
     padding: 2vh;
 }
 
-.player {
+.bar-group {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
